overlapping pill in the magnet thing fixed

--- a/rb/static/widget/css/widget.css
+++ b/rb/static/widget/css/widget.css
@@ -538,7 +538,7 @@ div#rdr_sandbox div.rdr_tag_details {
   position:absolute !important;
   background:#fff !important;
   z-index:100000 !important;
-  min-width:80px !important;
+  min-width:80px;;
   -webkit-box-shadow: 0 1px 2px rgba(128, 128, 128, 0.7) !important;
   -moz-box-shadow: 0 1px 2px rgba(128, 128, 128, 0.7) !important;
   box-shadow: 0 1px 2px rgba(128, 128, 128, 0.7) !important;
